Bug 269855 - KDE daemon crashed after connecting power
Summary: KDE daemon crashed after connecting power
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
: 269922 271342 272034 272250 273153 285710 291644 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-01 00:58 UTC by Wawrzyniec "Wawrzek" Niewodniczański
Modified: 2020-06-26 18:33 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wawrzyniec "Wawrzek" Niewodniczański 2011-04-01 00:58:14 UTC
Application: kded4 ($Id: kded.cpp 1204125 2010-12-06 11:17:10Z dfaure $)
KDE Platform Version: 4.6.00 (4.6.0) "release 6"
Qt Version: 4.7.1
Operating System: Linux 2.6.37.1-1.2-default i686
Distribution: "openSUSE 11.4 (i586)"

-- Information about the crash:
- What I was doing when the application crashed:
System wasn't doing anything special. I plugged external power and after moment saw the crash report. 

My computer is Dell Latitude 6510 with NVidia graphic card. 
OS: Fresh installation of OpenSUSE 11.4

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0xb57e9710 (LWP 12904))]

Thread 4 (Thread 0xad6ffb70 (LWP 12979)):
#0  0xb5fdc784 in poll () from /lib/libc.so.6
#1  0xb5a630bb in g_poll () from /lib/libglib-2.0.so.0
#2  0xb5a52c46 in ?? () from /lib/libglib-2.0.so.0
#3  0xb5a52fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0xb6dcc7b7 in QEventDispatcherGlib::processEvents (this=0x8193788, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0xb6d9d2bd in QEventLoop::processEvents (this=0xad6ff2b0, flags=...) at kernel/qeventloop.cpp:149
#6  0xb6d9d4e9 in QEventLoop::exec (this=0xad6ff2b0, flags=...) at kernel/qeventloop.cpp:201
#7  0xb6c9e7b9 in QThread::exec (this=0xad707290) at thread/qthread.cpp:490
#8  0xb6d7d23d in QInotifyFileSystemWatcherEngine::run (this=0xad707290) at io/qfilesystemwatcher_inotify.cpp:248
#9  0xb6ca13aa in QThreadPrivate::start (arg=0xad707290) at thread/qthread_unix.cpp:285
#10 0xb6c26980 in start_thread () from /lib/libpthread.so.0
#11 0xb5fe716e in clone () from /lib/libc.so.6

Thread 3 (Thread 0xac3b0b70 (LWP 13067)):
#0  0xb6c2a244 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0xb5a52a8f in ?? () from /lib/libglib-2.0.so.0
#2  0xb5a533ef in g_main_loop_run () from /lib/libglib-2.0.so.0
#3  0xac4a9001 in ?? () from /lib/libgio-2.0.so.0
#4  0xb5a7bf44 in ?? () from /lib/libglib-2.0.so.0
#5  0xb6c26980 in start_thread () from /lib/libpthread.so.0
#6  0xb5fe716e in clone () from /lib/libc.so.6

Thread 2 (Thread 0xae067b70 (LWP 14207)):
#0  0xb5fdc784 in poll () from /lib/libc.so.6
#1  0xb5a630bb in g_poll () from /lib/libglib-2.0.so.0
#2  0xb5a52c46 in ?? () from /lib/libglib-2.0.so.0
#3  0xb5a52fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#4  0xb6dcc7b7 in QEventDispatcherGlib::processEvents (this=0x81b7288, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#5  0xb6d9d2bd in QEventLoop::processEvents (this=0xae0672c0, flags=...) at kernel/qeventloop.cpp:149
#6  0xb6d9d4e9 in QEventLoop::exec (this=0xae0672c0, flags=...) at kernel/qeventloop.cpp:201
#7  0xb6c9e7b9 in QThread::exec (this=0x823cb08) at thread/qthread.cpp:490
#8  0xae162ef7 in ?? () from /usr/lib/kde4/kded_bluedevil.so
#9  0xb6ca13aa in QThreadPrivate::start (arg=0x823cb08) at thread/qthread_unix.cpp:285
#10 0xb6c26980 in start_thread () from /lib/libpthread.so.0
#11 0xb5fe716e in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb57e9710 (LWP 12904)):
[KCrash Handler]
#6  0xaffd38ca in PowerDevil::Core::onKIdleTimeoutReached (this=0x816f418, identifier=11, msec=60000) at /usr/src/debug/kdebase-workspace-4.6.0/powerdevil/daemon/powerdevilcore.cpp:553
#7  0xaffd5c10 in PowerDevil::Core::qt_metacall (this=0x816f418, _c=QMetaObject::InvokeMetaMethod, _id=30, _a=0xbfcf2524) at /usr/src/debug/kdebase-workspace-4.6.0/build/powerdevil/daemon/powerdevilcore.moc:174
#8  0xb6da48cd in QMetaObject::metacall (object=0x816f418, cl=QMetaObject::InvokeMetaMethod, idx=34, argv=0xbfcf2524) at kernel/qmetaobject.cpp:237
#9  0xb6db4a2c in QMetaObject::activate (sender=0x81c96f8, m=0xaffc0860, local_signal_index=2, argv=0xbfcf2524) at kernel/qobject.cpp:3272
#10 0xaffb7f0d in KIdleTime::timeoutReached (this=0x81c96f8, _t1=11, _t2=60000) at /usr/src/debug/kdelibs-4.6.0/build/kutils/kidletime.moc:124
#11 0xaffb9d50 in KIdleTimePrivate::_k_timeoutReached (this=0x81f5988, msec=60000) at /usr/src/debug/kdelibs-4.6.0/kutils/kidletime/kidletime.cpp:243
#12 0xaffba830 in KIdleTime::qt_metacall (this=0x81c96f8, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfcf2688) at /usr/src/debug/kdelibs-4.6.0/build/kutils/kidletime.moc:99
#13 0xb6da48cd in QMetaObject::metacall (object=0x81c96f8, cl=QMetaObject::InvokeMetaMethod, idx=13, argv=0xbfcf2688) at kernel/qmetaobject.cpp:237
#14 0xb6db4a2c in QMetaObject::activate (sender=0x81f6740, m=0xaffc0870, local_signal_index=1, argv=0xbfcf2688) at kernel/qobject.cpp:3272
#15 0xaffb8055 in AbstractSystemPoller::timeoutReached (this=0x81f6740, _t1=60000) at /usr/src/debug/kdelibs-4.6.0/build/kutils/abstractsystempoller.moc:115
#16 0xaffba167 in XSyncBasedPoller::x11Event (this=0x81f6740, event=0xbfcf2abc) at /usr/src/debug/kdelibs-4.6.0/kutils/kidletime/xsyncbasedpoller.cpp:235
#17 0xb7545cf3 in publicx11Event (this=0xbfcf2e10, _event=0xbfcf2abc) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:916
#18 KApplication::x11EventFilter (this=0xbfcf2e10, _event=0xbfcf2abc) at /usr/src/debug/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:967
#19 0xb63270ac in qt_x11EventFilter (ev=0xbfcf2abc) at kernel/qapplication_x11.cpp:436
#20 0xb6335c1f in QApplication::x11ProcessEvent (this=0xbfcf2e10, event=0xbfcf2abc) at kernel/qapplication_x11.cpp:3276
#21 0xb6361960 in x11EventSourceDispatch (s=0x80bf638, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#22 0xb5a52509 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#23 0xb5a52d10 in ?? () from /lib/libglib-2.0.so.0
#24 0xb5a52fce in g_main_context_iteration () from /lib/libglib-2.0.so.0
#25 0xb6dcc76b in QEventDispatcherGlib::processEvents (this=0x80b2008, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#26 0xb636155a in QGuiEventDispatcherGlib::processEvents (this=0x80b2008, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#27 0xb6d9d2bd in QEventLoop::processEvents (this=0xbfcf2d74, flags=...) at kernel/qeventloop.cpp:149
#28 0xb6d9d4e9 in QEventLoop::exec (this=0xbfcf2d74, flags=...) at kernel/qeventloop.cpp:201
#29 0xb6da1f90 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#30 0xb62a9104 in QApplication::exec () at kernel/qapplication.cpp:3719
#31 0xb540443d in kdemain (argc=1, argv=0x809a678) at /usr/src/debug/kdelibs-4.6.0/kded/kded.cpp:925
#32 0x0804e531 in launch (argc=1, _name=0x8052768 "kded4", args=<value optimized out>, cwd=0x0, envc=0, envs=<value optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x80525e3 "0") at /usr/src/debug/kdelibs-4.6.0/kinit/kinit.cpp:730
#33 0x08050f44 in main (argc=) at /usr/src/debug/kdelibs-4.6.0/kinit/kinit.cpp:1845

Reported using DrKonqi
Comment 1 Frank Reininghaus 2011-04-20 12:39:14 UTC
*** Bug 271342 has been marked as a duplicate of this bug. ***
Comment 2 Dario Freddi 2011-09-18 14:17:05 UTC
*** Bug 273153 has been marked as a duplicate of this bug. ***
Comment 3 Dario Freddi 2011-09-18 14:18:23 UTC
*** Bug 269922 has been marked as a duplicate of this bug. ***
Comment 4 Dario Freddi 2011-09-18 14:19:43 UTC
*** Bug 272034 has been marked as a duplicate of this bug. ***
Comment 5 Dario Freddi 2011-09-18 14:19:49 UTC
*** Bug 272250 has been marked as a duplicate of this bug. ***
Comment 6 Dario Freddi 2011-09-30 10:56:56 UTC
Git commit 0802a5da6cfaa79c91a7e46ddfa86f1c049a48c4 by Dario Freddi.
Committed on 30/09/2011 at 12:45.
Pushed by dafre into branch 'master'.

Move the activity simulation AFTER removing idle timeouts. Otherwise, timeouts might be
triggered out when the actions are still being unloaded, and hence still listening to them.

BUG: 269855

M  +4    -2    powerdevil/daemon/powerdevilcore.cpp

http://commits.kde.org/kde-workspace/0802a5da6cfaa79c91a7e46ddfa86f1c049a48c4
Comment 7 Dario Freddi 2011-09-30 14:12:55 UTC
Git commit 80ab498f0a9ca69abc82c2e01a491f19a239d9a0 by Dario Freddi.
Committed on 30/09/2011 at 12:45.
Pushed by dafre into branch 'KDE/4.7'.

Move the activity simulation AFTER removing idle timeouts. Otherwise, timeouts might be
triggered out when the actions are still being unloaded, and hence still listening to them.

BUG: 269855
FIXED-IN: 4.7.2

M  +4    -2    powerdevil/daemon/powerdevilcore.cpp

http://commits.kde.org/kde-workspace/80ab498f0a9ca69abc82c2e01a491f19a239d9a0
Comment 8 Christoph Feck 2011-11-04 00:09:35 UTC
*** Bug 285710 has been marked as a duplicate of this bug. ***
Comment 9 Thijs 2012-01-16 13:21:18 UTC
*** Bug 291644 has been marked as a duplicate of this bug. ***
Comment 10 Thijs 2012-01-16 13:23:20 UTC
Bug 291644 has a near identical backtrace, but is reported with 4.7.4, which is after the fix.